# Aeonovate

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
docs/: Changelog.md
docs/base/: base.md
src/: Aeonovate.hpp  main.cpp
src/base/: CMakeLists.txt  base.cpp
src/core/: CMakeLists.txt  core.cpp  core.hpp
